<resources>
    <string name="app_name">listpro</string>
    <string name="title_main_employee">Employee</string>
    <string name="title_main_customer">Customer</string>
    <string name="title_product">Product</string>
    <string name="title_advanced_products">Advanced Products</string>
    <string name="title_login_username">UserName</string>
    <string name="title_login_username_hint">Enter your username</string>
    <string name="title_login_password">Password</string>
    <string name="title_login_save_infor">Save your infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_confirm_exit_title">Confirm Exit</string>
    <string name="title_confirm_exit_message">Are you sure you want to exit?</string>
    <string name="title_confirm_exit_ok">OK</string>
    <string name="title_confirm_exit_cancel">CANCEL</string>
    <string name="title_activity_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height</string>
    <string name="title_weight">Weight</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_employee_healthcare">Healthcare</string>
    <string name="title_employee_salary">Salary</string>
    <string name="title_create_new_customer">New Customer</string>
    <string name="title_broadcast_adv">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Detail</string>
    <string name="title_customer_id">Customer ID</string>
    <string name="title_customer_name">Name</string>
    <string name="title_customer_email">Email</string>
    <string name="title_customer_phone">Phone</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_product_softdrink">Soft Drink</string>
    <string name="title_product_cake">Cake</string>
    <string name="title_product_fastfood">Fastfood</string>
    <string name="title_product_beer">Beer</string>
    <string name="title_product_seafood">Seafood</string>
    <string name="title_product_vegetarian">Vegetarian</string>
    <string name="title_product_fruit">Fruit</string>
    <string name="title_product_snack">Snack</string>
    <string name="title_product_coffee">Coffee</string>
    <string name="title_product_icecream">Ice Cream</string>
    <string name="title_product_name">Product name</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_product_quantity">Quantity</string>
    <string name="title_product_price">Price</string>
</resources>